--- a/GanttChartLightLibraryDemos/Demos/Samples/WPF-VisualBasic/GanttChartDataGrid/Printing/Printing.VisualBasic.GanttChartDataGrid.vbproj
+++ b/GanttChartLightLibraryDemos/Demos/Samples/WPF-VisualBasic/GanttChartDataGrid/Printing/Printing.VisualBasic.GanttChartDataGrid.vbproj
@@ -77,6 +77,9 @@
     <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PrintDialog.xaml.vb">
+      <DependentUpon>PrintDialog.xaml</DependentUpon>
+    </Compile>
     <Page Include="AppResources.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -90,6 +93,10 @@
       <SubType>
       </SubType>
     </Compile>
+    <Page Include="PrintDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Themes\Blue-navy.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
